welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:29: error: Unmatched closing brace '}' ignored here
}
^